``` feat(constant): 新增会话结束标识常量新增 ConversationSign 接口，定义会话结束标识字符串常量 [[END]]，用于统一标识 SSE 流的结束位置。
feat(controller): 替换硬编码结束标识为常量引用将 AiController 中的硬编码结束标识 "[[END]]" 替换为
ConversationSign.CONVERSATION_END 常量，提升代码可维护性。

feat(controller): 设置 SSE 接口响应编码

为 `/manus/chat` 接口显式指定 produces为 "text/event-stream;charset=UTF-8"，
确保中文内容正确传输。feat(config): 配置 Tomcat URI 编码与 Spring 编码过滤器

在 application.yml 中增加 tomcat.uri-encoding 配置并启用
spring.http.encoding，统一服务端字符编码为 UTF-8。refactor(agent): 优化结果列表获取逻辑并发送结束标识

并在会话正常结束时发送 ConversationSign.CONVERSATION_END 标识。```